# app/Models/Product.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Product extends Model
+{
+    use HasFactory;
+    protected $fillable =[
+        'name',
+        'image',
+        'priority',
+        'price',
+        'discountPrice',
+        'isDeleted',
+        'category_id',
+        'description',
+        'status'
+    ];
+}
